fixed caption errors on Lower lobby. removed caption from target atrium for now. Need more discovery and font is broken anyway.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ LOWER-LOBBY/index.html
 LOWER-LOBBY/manifest.mf
 LOWER-LOBBY/app.js
 LOWER-LOBBY/__cache
+TARGET-ATRIUM/index.html
+TARGET-ATRIUM/manifest.mf
+TARGET-ATRIUM/app.js
+TARGET-ATRIUM/__cache
